# CR-CPU

./: README.md  cr-assembler-npp-language  cr-assembler-npp-language.xml  cr-cpu.md  instruction set.odt
cr-cc/: .gitignore  CMakeLists.txt  cr-cc.sln  makefile  run_tests.sh  setup.sh  setup_paths.sh
cr-cc/cr-cc/: CMakeLists.txt  assembler.cpp  cr-cc.vcxproj  cr-cc.vcxproj.filters  main.cpp  makefile
cr-cc/cr-cc-lib/: AST.cpp  AST.h  AST_code_gen.cpp  AST_declaration.cpp  AST_declaration.h  AST_expressions.cpp  AST_statements.cpp  CMakeLists.txt  assembler.cpp  assembler.h  c_to_asm.cpp  c_to_asm.h  cast.h  cmdline_parse.cpp  cmdline_parser.h  compiler.cpp  compiler.h  compiler_options.h  cr-cc-lib.vcxitems  cr-cc-lib.vcxitems.filters  file_io.cpp  file_io.h  file_reader.cpp  file_reader.h  label_maker.cpp  label_maker.h  linker.cpp  linker.h  machine_io.cpp  machine_io.h  makefile  object_code.cpp  object_code.h  old_parser.h  parser.cpp  parser.h  preprocessor.cpp  preprocessor.h  simulator.cpp  simulator.h  (+26 more)
cr-cc/cr-cc-test/: CMakeLists.txt  TEST_assembler.cpp  TEST_cast.cpp  TEST_compiler.cpp  TEST_linker.cpp  TEST_object_code.cpp  catch.h  cr-cc-test.vcxproj  cr-cc-test.vcxproj.filters  main.cpp  makefile  test_program.txt
cr-cc/stdlib/: .gitignore  cr-os.h  div.s  gpio.h  gpio.s  main.s  makefile  math.h  math_sqrt.c  mult.s  os-gpio.s  os-load-srec.s  os-puts.s  os-sleep.s  os-uart.s  os.s  print_num.h  print_num.s  program_loader.s  sleep.s  timer.h  timer.s  unistd.h  verify_os_hex.sh  vga.h  vga.s
cr-cc/test_data/: .gitignore  array_test.txt  basic.c  basic.h  bogomips.txt  build_and_run_test_code.sh  call_test.txt  data.s  div_test.s  exported_references_test.s  extern.h  external_references_test.s  fib_program.txt  first.c  flash.s  flash.txt  label.txt  (+14 more)
(+294 files in other folders)
